Word wrap on the <pre> tags - the background for code is no longer uggly when you put in a long line.

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ pre {
 	overflow: auto;
 	max-height: 500px;
 	color: #303030;
+	white-space: pre-wrap; /* css-3 */
+	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 /* Smileys */
